Rename DOM-mark to widget descriptor and improve its structure

--- a/boilerplates/react-union-boilerplate-basic/public/SampleApp/index.ejs
+++ b/boilerplates/react-union-boilerplate-basic/public/SampleApp/index.ejs
@@ -1,29 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      JavaScript is disabled. App will not run correctly.
-    </noscript>
 
-    <div id="hero"></div>
-    <script data-union-widget="" type="application/json">
-    {
-        "name": "hero",
-        "container": "hero"
-    }
-    </script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+</head>
 
-    <div id="content"></div>
-    <script data-union-widget="" type="application/json">
+<body>
+  <noscript>
+    JavaScript is disabled. App will not run correctly.
+  </noscript>
+
+  <div id="hero"></div>
+  <script data-union-widget="hero" data-union-container="hero" type="application/json"></script>
+
+  <div id="content"></div>
+  <script data-union-widget="content" data-union-container="content" type="application/json">
     {
-        "name": "content",
-        "container": "content"
+      "something": "bar"
     }
-    </script>
-  </body>
+  </script>
+</body>
+
 </html>
