--- a/boilerplates/react-union-boilerplate-basic/public/SampleApp/index.ejs
+++ b/boilerplates/react-union-boilerplate-basic/public/SampleApp/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body>
     <noscript>
