--- a/boilerplates/react-union-boilerplate-liferay-basic/public/SampleApp/index.ejs
+++ b/boilerplates/react-union-boilerplate-liferay-basic/public/SampleApp/index.ejs
@@ -16,6 +16,13 @@
     <script data-union-widget="hero" data-union-container="hero" type="application/json"></script>
 
     <div id="content"></div>
-    <script data-union-widget="content" data-union-container="content" type="application/json">{"textation": { "heading": "Welcome", "content": "This is a sample content passed by server." }}</script>
+    <script data-union-widget="content" data-union-container="content" type="application/json">
+    {
+      "textation": { 
+        "heading": "Welcome", 
+        "content": "This is a sample content passed by server."
+      }
+    }
+    </script>
   </body>
 </html>
