Grammar and naming fixes

--- a/boilerplates/react-union-boilerplate-liferay-basic/public/SampleApp/index.ejs
+++ b/boilerplates/react-union-boilerplate-liferay-basic/public/SampleApp/index.ejs
@@ -18,9 +18,9 @@
     <div id="content"></div>
     <script data-union-widget="content" data-union-container="content" type="application/json">
     {
-      "textation": { 
+      "messages": { 
         "heading": "Welcome", 
-        "content": "This is a sample content passed by server."
+        "content": "This is sample server content."
       }
     }
     </script>
